codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__status_surface__tests__shortcut_help_above_wide.snap
---
source: tui/src/bottom_pane/chat_composer/status_surface_tests.rs
expression: text
---








  Keyboard shortcuts

  Compose                       Session                  Transcript (open first)
  /        Commands             tab  Send message        ⌃t            Open transcript
  @        Mention files        ⌥,   Less reasoning      f3            Find text
  !        Shell command        ⌥.   More reasoning      pgup / pgdn   Scroll
  ⌃j       New line             f4   Inspect activity    ⌃space        Start selection
  ⌃⌥v      Paste image          ⌃c   Quit                ⌃home / ⌃end  Top / latest
  ⌃g       External editor                               ⇧⌥, / ⇧⌥.     Top / latest
  ⌃r       Search history
  esc esc  Edit last message

  /keymap customize

› Ask Codex

  MODEL · ~/project · Context 20% used
  ? / esc close
